Fixing side nav popout functionality, gains scroll bar when element overflows with story items. changing story page css (not complete), added black border css class, slight change to dashboard styling (not complete)

--- a/Source/public/custom-style.css
+++ b/Source/public/custom-style.css
@@ -13,22 +13,27 @@
 	-webkit-filter: blur(0.000001px);
 }
 #dashboardSelector{
-    width: 120px;
+    width: 160px;
     z-index: 10;
     left: 10px;
 	height: 60%;
 	visibility: hidden;
 }
+#storynav{
+	overflow-y: auto;
+	width: 160px;
+	height: 100%;
+	visibility: visible; 
+	background-color: transparent !important;
+}
 #storyNavList{
 	visibility: visible;
 	overflow-y: auto;
 }
-#storynav{
-	overflow-y: auto;
-	height: 100%;
-	width: 160px;
-	visibility: hidden;
-}
+/*hides popout nav scrollbar for google chrome
+#dashboardSelector::-webkit-scrollbar { 
+    display: none; 
+}*/
 .dash-item{
     border-left: 1px solid black !important;
     background-color: #1c1c1c !important;
@@ -53,6 +58,9 @@
     cursor: pointer;
     vertical-align: middle;
     line-height: 50px;
+	text-overflow:ellipsis;
+    overflow:hidden;
+    white-space: nowrap;
 
 }
 .custom-nav-link:hover{
@@ -224,6 +232,9 @@ i {
 .border-orange {
 	border: 2px solid #DC4405;"
 }
+.border-black{
+	border: 2px solid #3a3d42;"
+}
 .border-orange-thin {
 	border: 1px solid #DC4405;"
 }
@@ -267,5 +278,12 @@ i {
   src: url('assets/fonts/Stratum2-Bold.otf') format('opentype');
 }
 
-.grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.05); }
+.grow { 
+	transition: all .2s ease-in-out; 
+}
+.grow:hover { 
+	transform: scale(1.05);
+}
+#card-story:hover { 
+	border: 2px solid #DC4405;	
+}
